--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <title>VCC Swap</title>
-    <script src="https://vccswap.com/cdn-cgi/apps/head/-lSSG8OMGtclk7q_ITCZWl1_R1I.js"></script><link rel="shortcut icon" href="https://vccswap.com/favicon.ico">
+    <script src="https://vccswap.com/cdn-cgi/apps/head/-lSSG8OMGtclk7q_ITCZWl1_R1I.js"></script><link rel="shortcut icon" href="https://coin.top/production/upload/logo/THfSp73oeu5Jwr2oEWXCgFizXCuzzh31NR.png?t=1605788888455">
 
 
     <link rel="stylesheet" href="https://vccswap.com/css/reset.css" type="text/css">
