--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <header id="site_header" class="header mobile-menu-hide">
             <div class="header-content">
               <div class="header-photo">
-                <img src="https://vccswap.com/img/main_photo.svg" alt="Logo">
+                <img src="https://coin.top/production/upload/logo/THfSp73oeu5Jwr2oEWXCgFizXCuzzh31NR.png?t=1605788888455" alt="Logo">
               </div>
               <div class="header-titles">
                 <h2>VCC Swap</h2>
