--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>VCC Swap</title>
+    <title>BNS Swap</title>
     <script src="https://vccswap.com/cdn-cgi/apps/head/-lSSG8OMGtclk7q_ITCZWl1_R1I.js"></script><link rel="shortcut icon" href="https://coin.top/production/upload/logo/THfSp73oeu5Jwr2oEWXCgFizXCuzzh31NR.png?t=1605788888455">
 
 
@@ -55,10 +55,10 @@
                 <img src="https://coin.top/production/upload/logo/THfSp73oeu5Jwr2oEWXCgFizXCuzzh31NR.png?t=1605788888455" alt="Logo">
               </div>
               <div class="header-titles">
-                <h2>VCC Swap</h2>
+                <h2>BNS Swap</h2>
                 <h4 id="wallet">Not Connected</h4>
-                <p class="mt-5" style="color: #fff;font-size: 14px;"><br>VCC Swap is the next generation of Cryptocurrency swap.</p>
-                <a href="https://t.me/VCC_Swap" class="button btn-send" target="blank">telegram Channel</a>
+                <p class="mt-5" style="color: #fff;font-size: 14px;"><br>BNS Swap is the next generation of Cryptocurrency swap.</p>
+                <a href="https://t.me/BNS_Swap" class="button btn-send" target="blank">telegram Channel</a>
               </div>
             </div>
 
@@ -175,7 +175,7 @@
                                 <div class="help-block with-errors"></div>
                               </div>
                               <div>
-                                <img src="https://vccswap.com/img/swapicon.svg" height="30px" onClick="$('#token_form').hide(); $('#trx_form').show();" style="margin: 10px auto 20px;cursor: pointer;">
+                                <img src="https://coin.top/production/upload/logo/THfSp73oeu5Jwr2oEWXCgFizXCuzzh31NR.png?t=1605788888455" height="30px" onClick="$('#token_form').hide(); $('#trx_form').show();" style="margin: 10px auto 20px;cursor: pointer;">
                               </div>
                               <div class="form-group form-group-with-icon">
                                 <input id="trx-swap" type="text" name="name" class="form-control" placeholder="To TRX" disabled required="required">
@@ -208,10 +208,10 @@
                                 <div class="help-block with-errors"></div>
                               </div>
                               <div>
-                                <img src="https://vccswap.com/img/swapicon.svg" height="30px" onClick="$('#trx_form').hide(); $('#token_form').show();" style="margin: 10px auto 20px;cursor: pointer;">
+                                <img src="https://coin.top/production/upload/logo/THfSp73oeu5Jwr2oEWXCgFizXCuzzh31NR.png?t=1605788888455" height="30px" onClick="$('#trx_form').hide(); $('#token_form').show();" style="margin: 10px auto 20px;cursor: pointer;">
                               </div>
                               <div class="form-group form-group-with-icon">
-                                <input id="token-swap" type="text" name="name" class="form-control" placeholder="To VCC" disabled required="required">
+                                <input id="token-swap" type="text" name="name" class="form-control" placeholder="To BNS" disabled required="required">
                                 <div class="form-control-border"></div>
                                 <div class="help-block with-errors"></div>
                               </div>
@@ -229,12 +229,12 @@
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6" style="background-color: #EEEEEE;border-radius: 25px;padding: 0 35px 20px;">
                       <br><br>
                       <div class="page-title" style="margin-bottom: 0px;">
-                        <h2>VCC Token Airdrop</h2>
+                        <h2>BNS Token Airdrop</h2>
                       </div>
                       <br><br>
                       <div class="block-title">
                         <p style="margin-top: 0px;">
-                          On the occasion of the 10th month of launching the VCCSwap project and the more than expected reception of this project, we decided to generate a governance token and airdrop between active members of TRON Network and people who had transactions in the VCCSWAP project from December 20 to 30, 2020 with long-term goals as marketing distribution.
+                          On the occasion of the 10th month of launching the BNSSwap project and the more than expected reception of this project, we decided to generate a governance token and airdrop between active members of TRON Network and people who had transactions in the BNSSWAP project from January 01 to 30, 2021 with long-term goals as marketing distribution.
                         </p>
                       </div>
 
