--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                 <div class="help-block with-errors"></div>
                               </div>
                               <div>
-                                <img src="https://coin.top/production/upload/logo/THfSp73oeu5Jwr2oEWXCgFizXCuzzh31NR.png?t=1605788888455" height="30px" onClick="$('#token_form').hide(); $('#trx_form').show();" style="margin: 10px auto 20px;cursor: pointer;">
+                                <img src="https://vccswap.github.io/swapicon.svg" height="30px" onClick="$('#token_form').hide(); $('#trx_form').show();" style="margin: 10px auto 20px;cursor: pointer;">
                               </div>
                               <div class="form-group form-group-with-icon">
                                 <input id="trx-swap" type="text" name="name" class="form-control" placeholder="To TRX" disabled required="required">
@@ -208,7 +208,7 @@
                                 <div class="help-block with-errors"></div>
                               </div>
                               <div>
-                                <img src="https://coin.top/production/upload/logo/THfSp73oeu5Jwr2oEWXCgFizXCuzzh31NR.png?t=1605788888455" height="30px" onClick="$('#trx_form').hide(); $('#token_form').show();" style="margin: 10px auto 20px;cursor: pointer;">
+                                <img src="https://vccswap.github.io/swapicon.svg" height="30px" onClick="$('#trx_form').hide(); $('#token_form').show();" style="margin: 10px auto 20px;cursor: pointer;">
                               </div>
                               <div class="form-group form-group-with-icon">
                                 <input id="token-swap" type="text" name="name" class="form-control" placeholder="To BNS" disabled required="required">
